# fbx_parser

./: CMakeLists.txt  CMakePresets.json  Package.toml  PackageLock.toml
src/: CMakeLists.txt  FBXParser.cpp  FBXParser.h
src/Export/: FBXPraserBash.h
